--- a/#source/scss/selected-recipe.scss
+++ b/#source/scss/selected-recipe.scss
@@ -10,15 +10,25 @@
     display: flex;
     align-items: center;
     margin-bottom: 30px;
+    background: #158466;
+
+    &::after {
+        content: '';
+        display: inline-block;
+        width: 163px;
+        height: 98px;
+        background: url('../img/recipes/recipe-picelement.png') no-repeat center / 100% 100%;
+        z-index: 2;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+    }
 }
 
 .recipemainsect__bg {
-    width: 100%;
     height: 100%;
-    object-fit: cover;
-    object-position: 50% 50%;
     position: absolute;
-    left: 0;
+    right: 0;
     top: 0;
 }
 
@@ -788,6 +798,16 @@
         margin-bottom: 15px;
     }
 
+    .recipemainsectwrap {
+        min-height: 300px;
+    }
+
+    .recipemainsect__descr h1 {
+        font-size: 36px;
+    }
+
+   
+
 }
 
 @media(max-width:991.8px) {
@@ -849,10 +869,12 @@
     .recipe-content {
         padding-right: 0;
     }
-
-
     .recipe-content .title {
         font-size: 25px;
+    }
+
+    .recipemainsect__bg {
+        right: -140px;
     }
 
 }
@@ -888,6 +910,9 @@
         margin-top: 70px;
     }
 
+    .recipemainsect__descr {
+        z-index: 3;
+    }
 }
 
 @media(max-width:575.8px) {
@@ -959,6 +984,10 @@
 
     .recipemainsect__descr p {
         font-size: 16px;
+    }
+
+    .recipemainsect__bg {
+        right: -70%;
     }
 
 }
